force-app/main/default/objects/cargaRegionaisDdd__mdt/cargaRegionaisDdd__mdt.object-meta.xml
<CustomObject>
    <label>cargaRegionaisDdd</label>
    <pluralLabel>cargaRegionaisDdds</pluralLabel>
</CustomObject>