force-app/main/default/objects/cargaRegionaisDdd__mdt/fields/ddd__c.field-meta.xml
<CustomField>
    <fullName>ddd__c</fullName>
    <label>ddd</label>
    <length>30</length>
    <type>Text</type>
</CustomField>