force-app/main/default/objects/cargaRegionaisDdd__mdt/fields/tecnologia4G__c.field-meta.xml
<CustomField>
    <fullName>tecnologia4G__c</fullName>
    <defaultValue>false</defaultValue>
    <label>tecnologia4G</label>
    <type>Checkbox</type>
</CustomField>