force-app/main/default/objects/cargaRegionaisDdd__mdt/fields/tecnologia5G__c.field-meta.xml
<CustomField>
    <fullName>tecnologia5G__c</fullName>
    <defaultValue>false</defaultValue>
    <label>tecnologia5G</label>
    <type>Checkbox</type>
</CustomField>